# workflow-shas

./: .gitignore  README.md  action.yml  check_sha_pinning.py  pin_shas.py  pyproject.toml
.github/workflows/: check.yml
workflow_shas/: __init__.py  __main__.py  cli.py  gh.py  scan.py
workflow_shas/commands/: check.py  enforce.py  pin.py
